alignment fixed

--- a/src/style.css
+++ b/src/style.css
@@ -25,7 +25,10 @@ body
 
 body {
     overflow-x: hidden;
-    color: white
+    color: white;
+    display: flex;
+    align-content: center;
+    flex-direction: column;
 }
 
 .webgl {
